<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Currency Rates KZ</string>
  <string name="no_network_connection">No network connection available</string>
  <string name="no_data_received">Could not receive rates</string>
  <string name="refresh">Refresh</string>
  <string name="date">Date</string>
  <string name="settings">Settings</string>
  <string name="settings_display_currency">Display currency</string>
  <string name="loading">Loading...</string>
  <string name="select">Currency Rates on Date</string>
  <string name="title">Rates on</string>
  <string name="AUD">AUSTRALIAN DOLLAR</string>
  <string name="GBP">GREAT BRITAIN POUND</string>
  <string name="BYN">BELARUS ROUBLE</string>
  <string name="BRL">BRAZILIAN REAL</string>
  <string name="HUF">HUNGARIAN FORINT</string>
  <string name="HKD">HONG KONG DOLLAR</string>
  <string name="DKK">DANISH KRONA</string>
  <string name="AED">UAE DIRHAM</string>
  <string name="USD">US DOLLAR</string>
  <string name="EUR">EURO</string>
  <string name="CAD">CANADIAN DOLLAR</string>
  <string name="CNY">CHINESE YUAN</string>
  <string name="KWD">KUWAIT DINAR</string>
  <string name="KGS">KYRGYZIAN SOM</string>
  <string name="LVL">LATVIAN LAT</string>
  <string name="LTL">LITHUANIAN LIT</string>
  <string name="MDL">MOLDAVIAN LEY</string>
  <string name="MYR">MALAYSIAN RINGGIT</string>
  <string name="NOK">NORWEGIAN KRONA</string>
  <string name="PLN">POLISH ZLOTY</string>
  <string name="SAR">SAUDI RIYAL</string>
  <string name="RUB">RUSSIAN ROUBLE</string>
  <string name="XDR">SDR</string>
  <string name="SGD">SINGAPORE DOLLAR</string>
  <string name="TJS">TAJIKISTAN SOMONI</string>
  <string name="TRY">TURKISH LIRA</string>
  <string name="UZS">UZBEKISTAN SUM</string>
  <string name="UAH">UKRAINIAN GRIVNA</string>
  <string name="CZK">CRECH KORUNA</string>
  <string name="SEK">SWEDISH KRONA</string>
  <string name="CHF">SWISS FRANC</string>
  <string name="ZAR">SOUTH AFRICAN RAND</string>
  <string name="KRW">SOUTH KOREAN WON</string>
  <string name="JPY">JAPANESE YEN</string>
  <string name="EEK">ESTONIAN KRONA</string>
  <string name="AZN">AZERBAIJAN MANAT</string>
  <string name="THB">THAI BAHT</string>
  <string name="INR">INDIAN RUPEE</string>
  <string name="AMD">ARMENIAN DRAM</string>
  <string name="IRR">IRANIAN RIAL</string>
  <string name="GEL">GEORGIAN LARI</string>
  <string name="MXN">MEXICAN PESO</string>
  <string name="convert">Convert</string>
  <string name="conversion_title">Currency conversion</string>
  <string name="chart_title">Rates Chart</string>
  <string name="x_axis_name">Time</string>
  <string name="y_axis_name">Tenge</string>
  <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3269683304908157/5160774424</string>
  <string name="widget_currency_display">Display Currency on Widget</string>
  <string name="widget_config">Widget Settings</string>
  <string name="last_updated">Updated:</string>
  <string name="background_color_title">Background Color</string>
  <string name="background_title">Widget Background</string>
  <string name="opacity_title">Opacity</string>

  <string-array name="period">
    <item>Week</item>
    <item>Month</item>
    <item>Year</item>
  </string-array>

  <string-array name="widgetBackgroundLabels">
    <item>White</item>
    <item>Black</item>
  </string-array>

  <string-array name="widgetBackgroundValues">
    <item>#00ffffff</item>
    <item>#00000000</item>
  </string-array>
  <string name="title_activity_base" translatable="false">BaseActivity</string>

  <string name="title_section1" translatable="false">Section 1</string>
  <string name="title_section2" translatable="false">Section 2</string>
  <string name="title_section3" translatable="false">Section 3</string>

  <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
  <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

  <string name="action_example" translatable="false">Example action</string>

  <string name="action_settings" translatable="false">Settings</string>
  <string name="rates">Rates</string>
  <string name="history">History</string>
  <string name="chart">Chart</string>
  <string name="communicate">Advanced</string>
  <string name="share">Share</string>
  <string name="rate">Rate</string>
  <string name="about">About</string>

  <string name="about_text">
  <![CDATA[
    <b>Курсы Валют KZ - актуальные курсы у вас в телефоне!</b><br/>
    <br/>
		Версия приложения: VERSION_NUMBER<br/>
    <br/>
		Ничего лишнего, только функционал при простом интерфейсе:
    <br/><br/>
		- отображение ежедневных курсов валют;<br/>
		- запрос курсов на определенную дату;<br/>
		- настройки отображения валют;<br/>
		- валютный калькулятор;<br/>
		- график изменения курсов;<br/>
    <br/>
		О найденных ошибках и пожеланиях пишите, пожалуйста, в отзывах или на почту <a href="mailto:support@digittonic.com">support@digittonic.com</a>
  ]]>
</string>
</resources>
