<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:key="pref_key_display_options"
    android:title="@string/settings_display_currency">
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/aud"
      android:key="pref_key_show_AUD"
      android:summary="@string/AUD"
      android:title="AUD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/gbp"
      android:key="pref_key_show_GBP"
      android:summary="@string/GBP"
      android:title="GBP"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/byn"
      android:key="pref_key_show_BYN"
      android:summary="@string/BYN"
      android:title="BYN"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/brl"
      android:key="pref_key_show_BRL"
      android:summary="@string/BRL"
      android:title="BRL"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/huf"
      android:key="pref_key_show_HUF"
      android:summary="@string/HUF"
      android:title="HUF"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/hkd"
      android:key="pref_key_show_HKD"
      android:summary="@string/HKD"
      android:title="HKD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/dkk"
      android:key="pref_key_show_DKK"
      android:summary="@string/DKK"
      android:title="DKK"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/aed"
      android:key="pref_key_show_AED"
      android:summary="@string/AED"
      android:title="AED"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/usd"
      android:key="pref_key_show_USD"
      android:summary="@string/USD"
      android:title="USD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/eur"
      android:key="pref_key_show_EUR"
      android:summary="@string/EUR"
      android:title="EUR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/cad"
      android:key="pref_key_show_CAD"
      android:summary="@string/CAD"
      android:title="CAD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/cny"
      android:key="pref_key_show_CNY"
      android:summary="@string/CNY"
      android:title="CNY"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/kwd"
      android:key="pref_key_show_KWD"
      android:summary="@string/KWD"
      android:title="KWD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/kgs"
      android:key="pref_key_show_KGS"
      android:summary="@string/KGS"
      android:title="KGS"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/lvl"
      android:key="pref_key_show_LVL"
      android:summary="@string/LVL"
      android:title="LVL"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/ltl"
      android:key="pref_key_show_LTL"
      android:summary="@string/LTL"
      android:title="LTL"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/mdl"
      android:key="pref_key_show_MDL"
      android:summary="@string/MDL"
      android:title="MDL"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/myr"
      android:key="pref_key_show_MYR"
      android:summary="@string/MYR"
      android:title="MYR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/nok"
      android:key="pref_key_show_NOK"
      android:summary="@string/NOK"
      android:title="NOK"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/pln"
      android:key="pref_key_show_PLN"
      android:summary="@string/PLN"
      android:title="PLN"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/sar"
      android:key="pref_key_show_SAR"
      android:summary="@string/SAR"
      android:title="SAR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/rub"
      android:key="pref_key_show_RUB"
      android:summary="@string/RUB"
      android:title="RUB"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:key="pref_key_show_XDR"
      android:summary="@string/XDR"
      android:title="XDR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/sgd"
      android:key="pref_key_show_SGD"
      android:summary="@string/SGD"
      android:title="SGD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/tjs"
      android:key="pref_key_show_TJS"
      android:summary="@string/TJS"
      android:title="TJS"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/ytl"
      android:key="pref_key_show_TRY"
      android:summary="@string/TRY"
      android:title="TRY"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/uzs"
      android:key="pref_key_show_UZS"
      android:summary="@string/UZS"
      android:title="UZS"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/uah"
      android:key="pref_key_show_UAH"
      android:summary="@string/UAH"
      android:title="UAH"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/czk"
      android:key="pref_key_show_CZK"
      android:summary="@string/CZK"
      android:title="CZK"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/sek"
      android:key="pref_key_show_SEK"
      android:summary="@string/SEK"
      android:title="SEK"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/chf"
      android:key="pref_key_show_CHF"
      android:summary="@string/CHF"
      android:title="CHF"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/zar"
      android:key="pref_key_show_ZAR"
      android:summary="@string/ZAR"
      android:title="ZAR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/krw"
      android:key="pref_key_show_KRW"
      android:summary="@string/KRW"
      android:title="KRW"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/jpy"
      android:key="pref_key_show_JPY"
      android:summary="@string/JPY"
      android:title="JPY"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/eek"
      android:key="pref_key_show_EEK"
      android:summary="@string/EEK"
      android:title="EEK"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/thb"
      android:key="pref_key_show_THB"
      android:summary="@string/THB"
      android:title="THB"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/azn"
      android:key="pref_key_show_AZN"
      android:summary="@string/AZN"
      android:title="AZN"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/inr"
      android:key="pref_key_show_INR"
      android:summary="@string/INR"
      android:title="INR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/amd"
      android:key="pref_key_show_AMD"
      android:summary="@string/AMD"
      android:title="AMD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/irr"
      android:key="pref_key_show_IRR"
      android:summary="@string/IRR"
      android:title="IRR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/mxn"
      android:key="pref_key_show_MXN"
      android:summary="@string/MXN"
      android:title="MXN"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/gel"
      android:key="pref_key_show_GEL"
      android:summary="@string/GEL"
      android:title="GEL"/>
  </PreferenceCategory>
</PreferenceScreen>