<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:sample="http://schemas.android.com/apk/res-auto">
  <PreferenceCategory
    android:key="widget_background"
    android:title="@string/background_title">
    <ListPreference
      android:key="widgetBackgroundColor"
      android:title="@string/background_color_title"
      android:summary="%s"
      android:entries="@array/widgetBackgroundLabels"
      android:entryValues="@array/widgetBackgroundValues"
      android:defaultValue="#00ffffff"
      android:dialogTitle="@string/background_color_title"
      />
    <com.pavelsikun.seekbarpreference.SeekBarPreference
      android:key="sbOpacity"
      android:title="@string/opacity_title"
      sample:msbp_minValue="0"
      sample:msbp_maxValue="100"
      android:defaultValue="100"
      sample:msbp_interval="1"
      sample:msbp_measurementUnit="%"/>
  </PreferenceCategory>
  <PreferenceCategory
    android:key="widget_display_options"
    android:title="@string/widget_currency_display">
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/aud"
      android:key="widget_show_AUD"
      android:summary="@string/AUD"
      android:title="AUD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/gbp"
      android:key="widget_show_GBP"
      android:summary="@string/GBP"
      android:title="GBP"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/byr"
      android:key="widget_show_BYR"
      android:summary="@string/BYR"
      android:title="BYR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/brl"
      android:key="widget_show_BRL"
      android:summary="@string/BRL"
      android:title="BRL"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/huf"
      android:key="widget_show_HUF"
      android:summary="@string/HUF"
      android:title="HUF"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/hkd"
      android:key="widget_show_HKD"
      android:summary="@string/HKD"
      android:title="HKD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/dkk"
      android:key="widget_show_DKK"
      android:summary="@string/DKK"
      android:title="DKK"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/aed"
      android:key="widget_show_AED"
      android:summary="@string/AED"
      android:title="AED"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/usd"
      android:key="widget_show_USD"
      android:summary="@string/USD"
      android:title="USD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/eur"
      android:key="widget_show_EUR"
      android:summary="@string/EUR"
      android:title="EUR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/cad"
      android:key="widget_show_CAD"
      android:summary="@string/CAD"
      android:title="CAD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/cny"
      android:key="widget_show_CNY"
      android:summary="@string/CNY"
      android:title="CNY"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/kwd"
      android:key="widget_show_KWD"
      android:summary="@string/KWD"
      android:title="KWD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/kgs"
      android:key="widget_show_KGS"
      android:summary="@string/KGS"
      android:title="KGS"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/lvl"
      android:key="widget_show_LVL"
      android:summary="@string/LVL"
      android:title="LVL"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/ltl"
      android:key="widget_show_LTL"
      android:summary="@string/LTL"
      android:title="LTL"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/mdl"
      android:key="widget_show_MDL"
      android:summary="@string/MDL"
      android:title="MDL"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/myr"
      android:key="widget_show_MYR"
      android:summary="@string/MYR"
      android:title="MYR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/nok"
      android:key="widget_show_NOK"
      android:summary="@string/NOK"
      android:title="NOK"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/pln"
      android:key="widget_show_PLN"
      android:summary="@string/PLN"
      android:title="PLN"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/sar"
      android:key="widget_show_SAR"
      android:summary="@string/SAR"
      android:title="SAR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/rub"
      android:key="widget_show_RUB"
      android:summary="@string/RUB"
      android:title="RUB"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:key="widget_show_XDR"
      android:summary="@string/XDR"
      android:title="XDR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/sgd"
      android:key="widget_show_SGD"
      android:summary="@string/SGD"
      android:title="SGD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/tjs"
      android:key="widget_show_TJS"
      android:summary="@string/TJS"
      android:title="TJS"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/ytl"
      android:key="widget_show_TRY"
      android:summary="@string/TRY"
      android:title="TRY"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/uzs"
      android:key="widget_show_UZS"
      android:summary="@string/UZS"
      android:title="UZS"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/uah"
      android:key="widget_show_UAH"
      android:summary="@string/UAH"
      android:title="UAH"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/czk"
      android:key="widget_show_CZK"
      android:summary="@string/CZK"
      android:title="CZK"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/sek"
      android:key="widget_show_SEK"
      android:summary="@string/SEK"
      android:title="SEK"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/chf"
      android:key="widget_show_CHF"
      android:summary="@string/CHF"
      android:title="CHF"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/zar"
      android:key="widget_show_ZAR"
      android:summary="@string/ZAR"
      android:title="ZAR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/krw"
      android:key="widget_show_KRW"
      android:summary="@string/KRW"
      android:title="KRW"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/jpy"
      android:key="widget_show_JPY"
      android:summary="@string/JPY"
      android:title="JPY"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/eek"
      android:key="widget_show_EEK"
      android:summary="@string/EEK"
      android:title="EEK"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/thb"
      android:key="widget_show_THB"
      android:summary="@string/THB"
      android:title="THB"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/azn"
      android:key="widget_show_AZN"
      android:summary="@string/AZN"
      android:title="AZN"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/inr"
      android:key="widget_show_INR"
      android:summary="@string/INR"
      android:title="INR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/amd"
      android:key="widget_show_AMD"
      android:summary="@string/AMD"
      android:title="AMD"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/irr"
      android:key="widget_show_IRR"
      android:summary="@string/IRR"
      android:title="IRR"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/mxn"
      android:key="widget_show_MXN"
      android:summary="@string/MXN"
      android:title="MXN"/>
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/gel"
      android:key="widget_show_GEL"
      android:summary="@string/GEL"
      android:title="GEL"/>
  </PreferenceCategory>
</PreferenceScreen>