<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_rates"
      android:icon="@drawable/ic_action_rates"
      android:title="@string/rates"/>
    <item
      android:id="@+id/nav_history"
      android:icon="@drawable/ic_action_history"
      android:title="@string/history"/>
    <item
      android:id="@+id/nav_chart"
      android:icon="@drawable/ic_action_chart"
      android:title="@string/chart"/>
    <item
      android:id="@+id/nav_convert"
      android:icon="@drawable/ic_action_convert"
      android:title="@string/convert"
      />
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_action_settings"
      android:title="@string/settings"/>
  </group>

  <item android:title="@string/communicate">
    <menu>
      <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"/>
      <item
        android:id="@+id/nav_rating"
        android:icon="@drawable/ic_action_rating"
        android:title="@string/rate"/>
      <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/about"
        />
    </menu>
  </item>

</menu>
