<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_refresh"
          android:title="@string/refresh"
          android:icon="@drawable/ic_action_refresh"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_date"
          android:title="@string/date"
          android:icon="@drawable/ic_action_go_to_today"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_converter"
          android:title="@string/convert"
          android:icon="@drawable/ic_action_import_export"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_chart"
          android:title="@string/chart_title"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_settings"
          android:title="@string/settings"
          android:icon="@drawable/ic_action_settings"
          app:showAsAction="ifRoom|withText"/>
</menu>